# Agent-mbot

./: .gitignore  README.md  README_en.md  start_explore_and_mapping.sh  start_llm_agent.sh  start_pick_and_place_demo.sh  start_web_ui.sh
llm_agent/: qwen_api_test.py
src/franka_description/.docker/: Dockerfile
src/franka_description/meshes/nanoscan3/: NANS3.dae
src/graspnet_infer/: graspnet.rviz
src/graspnet_infer/graspnet_ros/: CMakeLists.txt  README.md
src/graspnet_infer/graspnet_ros/config/: config.yaml
src/graspnet_infer/tensorrt_plugins/: CMakeLists.txt  build.sh
src/x_bot/: CMakeLists.txt
src/x_bot/config/: sensors_3d_x_bot.yaml
src/x_bot/maps/: map.pgm  map.yaml
src/x_bot/models/simple_house/MaleVisitorSit/: model.sdf
src/x_bot/models/small_house/aws_robomaker_residential_KitchenTable_01/meshes/: aws_KitchenTable_01_collision.DAE
src/x_bot/rviz/: octomap.rviz
src/x_bot/scripts/: navigation_and_pick_demo.py  obstacle_avoidance_demo.py
src/x_bot/worlds/: manipulation_test.sdf  obstacle_avoidance_test.sdf
src/yoloe_infer/: CMakeLists.txt
src/yoloe_infer/configs/: config.yaml
src/yoloe_infer/include/: pointcloud_colorizer.hpp
src/yoloe_infer/src/: pointcloud_colorizer.cpp  ros2_trt_infer_text_prompt_multi_node.cpp
